sort works by time

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <header>
                 <h3>Skills</h3>
             </header>
+            <small>(Scored from 0 to 5)</small>
             <ul>
                 <li data-name="c">
                     C
@@ -182,7 +183,7 @@
                     <option value="matlab">MATLAB</option>
                 </select>
             </span>
-            <ul>
+            <ul class="work-highlights">
                 <li data-name="thesis">
                     <h4>Migratom.js: A JavaScript Migration Framework for Distributed Web Computing and Mobile Devices</h4>
                     <p>2013.08 - 2014.09</p>
@@ -215,6 +216,7 @@
                     <span class="nodejs">Node.js</span>
                     <span class="yahoo">Yahoo</span>
                 </li>
+            </ul><ul>
                 <li data-name="fbpjs">
                     <h4>FBP.js</h4>
                     <a href="https://github.com/teaualune/fbpjs" target="_blank">https://github.com/teaualune/fbpjs</a>
@@ -231,14 +233,6 @@
                     <span class="private">private</span>
                     <span class="case">case</span>
                 </li>
-                <li data-name="tec">
-                    <h4>Taidah Entreprenuership Center</h4>
-                    <p>2015.08</p>
-                    <a href="http://tec.ntu.edu.tw" target="_blank">http://tec.ntu.edu.tw</a>
-                    <span class="web">web</span>
-                    <span class="nodejs">Node.js</span>
-                    <span class="case">case</span>
-                </li>
                 <li data-name="cardo">
                     <h4>CARDO Website</h4>
                     <p>2015.08 - 2016.01</p>
@@ -246,6 +240,40 @@
                     <span class="web">web</span>
                     <span class="nodejs">Node.js</span>
                     <span class="react">React.js</span>
+                    <span class="case">case</span>
+                </li>
+                <li data-name="asian-barometer">
+                    <h4>Asian Barometer Website</h4>
+                    <p>2015.07 - 2015.12</p>
+                    <a href="http://asianbarometer.org" target="_blank">http://asianbarometer.org</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="ntu">NTU</span>
+                    <span class="case">case</span>
+                </li>
+                <li data-name="ifindbook">
+                    <h4>i找書</h4>
+                    <p>2015.06 - 2015.10</p>
+                    <a href="https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook" target="_blank">https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook</a>
+                    <span class="android">Android</span>
+                    <span class="java">Java</span>
+                    <span class="case">case</span>
+                </li>
+                <li data-name="tec">
+                    <h4>Taidah Entreprenuership Center Website</h4>
+                    <p>2015.08</p>
+                    <a href="http://tec.ntu.edu.tw" target="_blank">http://tec.ntu.edu.tw</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="case">case</span>
+                </li>
+                <li data-name="global-barometer">
+                    <h4>Global Barometer Website</h4>
+                    <p>2015.01 - 2015.06</p>
+                    <a href="http://globalbarometer.org" target="_blank">http://globalbarometer.org</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="ntu">NTU</span>
                     <span class="case">case</span>
                 </li>
                 <li data-name="rakuten-react">
@@ -258,39 +286,20 @@
                     <span class="private">private</span>
                     <span class="case">case</span>
                 </li>
-                <li data-name="asian-barometer">
-                    <h4>Asian Barometer Website</h4>
-                    <p>2015.07 - 2015.12</p>
-                    <a href="http://asianbarometer.org" target="_blank">http://asianbarometer.org</a>
-                    <span class="web">web</span>
-                    <span class="nodejs">Node.js</span>
-                    <span class="ntu">NTU</span>
-                    <span class="case">case</span>
-                </li>
-                <li data-name="global-barometer">
-                    <h4>Global Barometer Website</h4>
-                    <p>2015.01 - 2015.06</p>
-                    <a href="http://globalbarometer.org" target="_blank">http://globalbarometer.org</a>
-                    <span class="web">web</span>
-                    <span class="nodejs">Node.js</span>
-                    <span class="ntu">NTU</span>
-                    <span class="case">case</span>
-                </li>
-                <li data-name="pdp-site">
-                    <h4>Parallel and Distributed Programming Course Site</h4>
-                    <p>2014.02 - 2014.03</p>
-                    <a href="https://github.com/teaualune/pdp-site" target="_blank">https://github.com/teaualune/pdp-site</a>
-                    <span class="web">web</span>
-                    <span class="nodejs">Node.js</span>
-                    <span class="angular">Angular.js</span>
-                    <span class="ntu">NTU</span>
-                </li>
                 <li data-name="hsa-tutorial-day">
                     <h4>HSA Tutorial Day Website</h4>
                     <p>2015.02</p>
                     <a href="https://github.com/teaualune/hsa-tutorial-day" target="_blank">https://github.com/teaualune/hsa-tutorial-day</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
+                    <span class="case">case</span>
+                </li>
+                <li data-name="unieco">
+                    <h4>UniEco Website</h4>
+                    <p>2014.11</p>
+                    <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
                     <span class="case">case</span>
                 </li>
                 <li data-name="tmu-international-scholarships">
@@ -309,13 +318,14 @@
                     <span class="java">Java</span>
                     <span class="case">case</span>
                 </li>
-                <li data-name="ifindbook">
-                    <h4>i找書</h4>
-                    <p>2015.06 - 2015.10</p>
-                    <a href="https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook" target="_blank">https://play.google.com/store/apps/details?id=tw.edu.ncl.ifindbook</a>
-                    <span class="android">Android</span>
-                    <span class="java">Java</span>
-                    <span class="case">case</span>
+                <li data-name="pdp-site">
+                    <h4>Parallel and Distributed Programming Course Site</h4>
+                    <p>2014.02 - 2014.03</p>
+                    <a href="https://github.com/teaualune/pdp-site" target="_blank">https://github.com/teaualune/pdp-site</a>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="angular">Angular.js</span>
+                    <span class="ntu">NTU</span>
                 </li>
                 <li data-name="yamyday">
                     <h4>Ya!MyDay</h4>
@@ -326,12 +336,13 @@
                     <span class="nodejs">Node.js</span>
                     <span class="hackday">hackday</span>
                 </li>
-                <li data-name="jq-shootduck">
-                    <h4>Shoot Duck - jQuery Sample</h4>
-                    <p>2013.03</p>
-                    <a href="https://github.com/teaualune/shootduck" target="_blank">https://github.com/teaualune/shootduck</a>
+                <li data-name="cardcial">
+                    <h4>Cardcial (former Himelight)</h4>
+                    <p>2013.06 - 2013.09</p>
                     <span class="web">web</span>
-                    <span class="game">game</span>
+                    <span class="nodejs">Node.js</span>
+                    <span class="startup">startup</span>
+                    <span class="private">private</span>
                 </li>
                 <li data-name="sk-shootduck">
                     <h4>Shoot Duck - Sprite Kit Sample</h4>
@@ -339,6 +350,13 @@
                     <a href="https://github.com/teaualune/sk-shootduck" target="_blank">https://github.com/teaualune/sk-shootduck</a>
                     <span class="ios">iOS</span>
                     <span class="game">game</span>
+                </li>
+                <li data-name="y-clothes-finder">
+                    <h4>Yahoo! Clothes Finder</h4>
+                    <p>2013.06</p>
+                    <span class="ios">iOS</span>
+                    <span class="yahoo">Yahoo</span>
+                    <span class="private">private</span>
                 </li>
                 <li data-name="mapreduce-websocket">
                     <h4>MapReduce with WebSocket</h4>
@@ -348,35 +366,18 @@
                     <span class="ntu">NTU</span>
                     <span class="nodejs">Node.js</span>
                 </li>
-                <li data-name="unieco">
-                    <h4>UniEco Website</h4>
-                    <p>2014.11</p>
-                    <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
+                <li data-name="jq-shootduck">
+                    <h4>Shoot Duck - jQuery Sample</h4>
+                    <p>2013.03</p>
+                    <a href="https://github.com/teaualune/shootduck" target="_blank">https://github.com/teaualune/shootduck</a>
                     <span class="web">web</span>
-                    <span class="nodejs">Node.js</span>
-                    <span class="case">case</span>
+                    <span class="game">game</span>
                 </li>
-                <li data-name="cardcial">
-                    <h4>Cardcial (former Himelight)</h4>
-                    <p>2013.06 - 2013.09</p>
-                    <span class="web">web</span>
-                    <span class="nodejs">Node.js</span>
-                    <span class="startup">startup</span>
-                </li>
-                <li data-name="weblog-demo">
-                    <h4>Weblog Demo</h4>
-                    <p>2011.06</p>
-                    <a href="http://teaualunemsglogdemo.appspot.com" target="_blank">http://teaualunemsglogdemo.appspot.com</a>
-                    <span class="web">web</span>
-                    <span class="java">Java</span>
-                    <span class="ntu">NTU</span>
-                </li>
-                <li data-name="compurchasy">
-                    <h4>Compurchasy</h4>
-                    <p>2012.06</p>
-                    <a href="http://compurchasy.herokuapp.com" target="_blank">http://compurchasy.herokuapp.com</a>
-                    <span class="web">web</span>
-                    <span class="ror">RoR</span>
+                <li data-name="r-u-lucky-here">
+                    <h4>Are You Lucky Here?</h4>
+                    <p>2012.12</p>
+                    <a href="https://bitbucket.org/teaualune/checkinfortune" target="_blank">https://bitbucket.org/teaualune/checkinfortune</a>
+                    <span class="ios">iOS</span>
                     <span class="ntu">NTU</span>
                 </li>
                 <li data-name="hihidaruma">
@@ -394,18 +395,20 @@
                     <span class="yahoo">Yahoo</span>
                     <span class="private">private</span>
                 </li>
-                <li data-name="y-clothes-finder">
-                    <h4>Yahoo! Clothes Finder</h4>
-                    <p>2013.06</p>
-                    <span class="ios">iOS</span>
-                    <span class="yahoo">Yahoo</span>
-                    <span class="private">private</span>
+                <li data-name="compurchasy">
+                    <h4>Compurchasy</h4>
+                    <p>2012.06</p>
+                    <a href="http://compurchasy.herokuapp.com" target="_blank">http://compurchasy.herokuapp.com</a>
+                    <span class="web">web</span>
+                    <span class="ror">RoR</span>
+                    <span class="ntu">NTU</span>
                 </li>
-                <li data-name="r-u-lucky-here">
-                    <h4>Are You Lucky Here?</h4>
-                    <p>2012.12</p>
-                    <a href="https://bitbucket.org/teaualune/checkinfortune" target="_blank">https://bitbucket.org/teaualune/checkinfortune</a>
-                    <span class="ios">iOS</span>
+                <li data-name="weblog-demo">
+                    <h4>Weblog Demo</h4>
+                    <p>2011.06</p>
+                    <a href="http://teaualunemsglogdemo.appspot.com" target="_blank">http://teaualunemsglogdemo.appspot.com</a>
+                    <span class="web">web</span>
+                    <span class="java">Java</span>
                     <span class="ntu">NTU</span>
                 </li>
                 <li data-name="ct-cuda">
@@ -430,22 +433,22 @@
             <ul>
                 <li data-name="gittalk">
                     <h4>Introduction to Git</h4>
-                    <p>2016.03</p>
+                    <p>2016.03.16 (NTU Garage) / 2016.04.12 (CSIE, NTU)</p>
                     <a href="https://github.com/teaualune/gittalk" target="_blank">https://github.com/teaualune/gittalk</a>
                 </li>
                 <li data-name="webtalk">
                     <h4>Various Topics in Web Development</h4>
-                    <p>2016.03</p>
+                    <p>2016.03.30 (NTU Garage)</p>
                     <a href="https://github.com/teaualune/webtalk" target="_blank">https://github.com/teaualune/webtalk</a>
                 </li>
                 <li data-name="spritekit-talk">
                     <h4>Introduction to Sprite Kit</h4>
-                    <p>2013.07</p>
+                    <p>2013.07.28 (FrogCafe)</p>
                     <a href="https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit" target="_blank">https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit</a>
                 </li>
                 <li data-name="latex-tutorial">
                     <h4>LaTeX Tutorial</h4>
-                    <p>2015.01</p>
+                    <p>2015.01.28 (CSIE, NTU)</p>
                     <a href="https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274" target="_blank">https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274</a>
                 </li>
             </ul>
