--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
                 <h3>Experience</h3>
             </header>
             <ul>
+                <li data-name="radioflux">
+                    <h4>Software Engineer, Radioflux Co., Ltd.</h4>
+                    <p>2016 - Present</p>
+                </li>
                 <li data-name="bitah">
                     <h4>Chief Technology Officer, BITAH Tech Co., Ltd.</h4>
-                    <p>2014 - Present</p>
+                    <p>2014 - 2016</p>
                 </li>
                 <li data-name="zencher">
                     <h4>Project Consultant, Zencher Ltd.</h4>
@@ -74,30 +78,6 @@
             </header>
             <small>(Scored from 0 to 5)</small>
             <ul>
-                <li data-name="c">
-                    C
-                    <span>★★☆</span>
-                </li>
-                <li data-name="matlab">
-                    MATLAB
-                    <span>★★★★</span>
-                </li>
-                <li data-name="java-se">
-                    Java SE
-                    <span>★★★★</span>
-                </li>
-                <li data-name="java-ee">
-                    Java EE (Servlet &amp; JSP)
-                    <span>★★★</span>
-                </li>
-                <li data-name="objc">
-                    Objective-C
-                    <span>★★★★</span>
-                </li>
-                <li data-name="ios">
-                    iOS Development
-                    <span>★★★★</span>
-                </li>
                 <li data-name="js">
                     JavaScript
                     <span>★★★★☆</span>
@@ -110,13 +90,49 @@
                     Node.js
                     <span>★★★★☆</span>
                 </li>
+                <li data-name="java-se">
+                    Java SE
+                    <span>★★★★</span>
+                </li>
+                <li data-name="objc">
+                    Objective-C
+                    <span>★★★★</span>
+                </li>
+                <li data-name="ios">
+                    iOS Development
+                    <span>★★★★</span>
+                </li>
+                <li data-name="swift">
+                    Swift
+                    <span>★★★☆</span>
+                </li>
                 <li data-name="android">
                     Android Development
                     <span>★★★☆</span>
                 </li>
+                <li data-name="matlab">
+                    MATLAB
+                    <span>★★★☆</span>
+                </li>
+                <li data-name="java-ee">
+                    Java EE (Servlet &amp; JSP)
+                    <span>★★★</span>
+                </li>
+                <li data-name="ooad">
+                    UML &amp; OOAD
+                    <span>★★★</span>
+                </li>
+                <li data-name="latex">
+                    LaTeX
+                    <span>★★★</span>
+                </li>
                 <li data-name="ai">
                     Adobe Illustrator
                     <span>★★★</span>
+                </li>
+                <li data-name="c">
+                    C
+                    <span>★★☆</span>
                 </li>
                 <li data-name="cuda">
                     CUDA
@@ -126,18 +142,6 @@
                     Hadoop
                     <span>★☆</span>
                 </li> -->
-                <li data-name="ooad">
-                    UML &amp; OOAD
-                    <span>★★★</span>
-                </li>
-                <li data-name="latex">
-                    LaTeX
-                    <span>★★★</span>
-                </li>
-                <li data-name="swift">
-                    Swift
-                    <span>★★</span>
-                </li>
                 <li data-name="python">
                     Python
                     <span>★☆</span>
