update works and talks

--- a/index.html
+++ b/index.html
@@ -130,6 +130,18 @@
                     Adobe Illustrator
                     <span>★★★</span>
                 </li>
+                <li data-name="golang">
+                    Golang
+                    <span>★★☆</span>
+                </li>
+                <li data-name="docker">
+                    Docker
+                    <span>★★☆</span>
+                </li>
+                <li data-name="sql">
+                    SQL
+                    <span>★★☆</span>
+                </li>
                 <li data-name="c">
                     C
                     <span>★★☆</span>
@@ -154,10 +166,6 @@
                     Ruby on Rails (RoR)
                     <span>★</span>
                 </li>
-                <!-- <li data-name="golang">
-                    Golang
-                    <span>★</span>
-                </li> -->
             </ul>
         </section>
         <section id="works">
@@ -236,6 +244,13 @@
                     <span class="ios">iOS</span>
                     <span class="private">private</span>
                     <span class="case">case</span>
+                </li>
+                <li data-name="trampolinebomb">
+                    <h4>Trampoline Bomb</h4>
+                    <p>2016.07</p>
+                    <a href="https://github.com/teaualune/TrampolineBomb" target="_blank">https://github.com/teaualune/TrampolineBomb</a>
+                    <span class="ios">iOS</span>
+                    <span class="game">game</span>
                 </li>
                 <li data-name="cardo">
                     <h4>CARDO Website</h4>
@@ -435,6 +450,11 @@
         <section id="talks">
             <header><h3>Talks</h3></header>
             <ul>
+                <li data-name="iaastalk">
+                    <h4>Introduction to IaaS and Web Server</h4>
+                    <p>2016.09.09 (NTU Garage)</p>
+                    <a href="https://github.com/teaualune/iaastalk" target="_blank">https://github.com/teaualune/iaastalk</a>
+                </li>
                 <li data-name="gittalk">
                     <h4>Introduction to Git</h4>
                     <p>2016.03.16 (NTU Garage) / 2016.04.12 (CSIE, NTU)</p>
