update talks and works

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                     <option value="php">PHP</option>
                     <option value="cuda">CUDA</option>
                     <option value="matlab">MATLAB</option>
+                    <option value="support">support</option>
                 </select>
             </span>
             <ul class="work-highlights">
@@ -234,6 +235,14 @@
                     <a href="https://github.com/teaualune/fbpjs" target="_blank">https://github.com/teaualune/fbpjs</a>
                     <span class="web">web</span>
                     <span class="ntu">NTU</span>
+                </li>
+                <li data-name="warmie">
+                    <h4>Warmie</h4>
+                    <a href="https://play.google.com/store/apps/details?id=com.warmie.app" target="_blank">https://play.google.com/store/apps/details?id=com.warmie.app</a>
+                    <span class="android">Android</span>
+                    <span class="java">Java</span>
+                    <span class="case">case</span>
+                    <span class="support">support</span>
                 </li>
                 <li data-name="postcss9patch">
                     <h4>PostCSS Border 9-patch Plugin</h4>
@@ -310,6 +319,7 @@
                     <span class="react">React.js</span>
                     <span class="private">private</span>
                     <span class="case">case</span>
+                    <span class="support">support</span>
                 </li>
                 <li data-name="hsa-tutorial-day">
                     <h4>HSA Tutorial Day Website</h4>
@@ -456,30 +466,35 @@
         <section id="talks">
             <header><h3>Talks</h3></header>
             <ul>
+                <li data-name="swifttalk-2016">
+                    <h4>Build Your Own Swift JSONModel</h4>
+                    <p>2016.12.23, Apple Inc. TW</p>
+                    <a href="https://pics.ee/swifttalk-2016" target="_blank">pics.ee/swifttalk-2016</a>
+                </li>
                 <li data-name="iaastalk">
                     <h4>Introduction to IaaS and Web Server</h4>
-                    <p>2016.09.09 (NTU Garage)</p>
+                    <p>2016.09.09, NTU Garage</p>
                     <a href="https://github.com/teaualune/iaastalk" target="_blank">https://github.com/teaualune/iaastalk</a>
                 </li>
                 <li data-name="gittalk">
                     <h4>Introduction to Git</h4>
-                    <p>2016.03.16 (NTU Garage) / 2016.04.12 (CSIE, NTU)</p>
+                    <p>2016.03.16, NTU Garage / 2016.04.12, NTU CSIE</p>
                     <a href="https://github.com/teaualune/gittalk" target="_blank">https://github.com/teaualune/gittalk</a>
                 </li>
                 <li data-name="webtalk">
                     <h4>Various Topics in Web Development</h4>
-                    <p>2016.03.30 (NTU Garage)</p>
+                    <p>2016.03.30, NTU Garage</p>
                     <a href="https://github.com/teaualune/webtalk" target="_blank">https://github.com/teaualune/webtalk</a>
-                </li>
-                <li data-name="spritekit-talk">
-                    <h4>Introduction to Sprite Kit</h4>
-                    <p>2013.07.28 (FrogCafe)</p>
-                    <a href="https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit" target="_blank">https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit</a>
                 </li>
                 <li data-name="latex-tutorial">
                     <h4>LaTeX Tutorial</h4>
-                    <p>2015.01.28 (CSIE, NTU)</p>
+                    <p>2015.01.28, NTU CSIE</p>
                     <a href="https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274" target="_blank">https://www.slideshare.net/TaiLunTseng/latex-tutorial-61245274</a>
+                <li data-name="spritekit-talk">
+                    <h4>Introduction to Sprite Kit</h4>
+                    <p>2013.07.28, FrogCafe</p>
+                    <a href="https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit" target="_blank">https://www.slideshare.net/TaiLunTseng/introduction-to-sprite-kit</a>
+                </li>
                 </li>
             </ul>
         </section>
