--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </p>
                 </li>
                 <li data-name="uww">
-                    <h4>Yahoo! U Want Wall</h4>
+                    <h4><span class="discontinued">Discontinued</span> Yahoo! U Want Wall</h4>
                     <p>
                         2012.11 - 2013.04 <br />
                         <a href="https://tw.uwant.yahoo.com" target="_blank">https://tw.uwant.yahoo.com</a>
@@ -259,16 +259,25 @@
                         <span class="support">support</span>
                     </p>
                 </li>
-                <!--<li data-name="merck">
-                    <h4>Merck Onepage</h4>
+                <li data-name="merck">
+                    <h4>Merck One Page</h4>
                     <p>
-                        2017.06 - 2017.08 <br />
-                        <a href="https://play.google.com/store/apps/details?id=de.merck.onepage" target="_blank">https://play.google.com/store/apps/details?id=de.merck.onepage</a>
+                        2017.06 - 2017.12 <br />
+                        <a href="https://play.google.com/store/apps/details?id=de.merck.onepagedealer.googleplay" target="_blank">https://play.google.com/store/apps/details?id=de.merck.onepagedealer.googleplay</a>
                         <span class="android">Android</span>
                         <span class="java">Java</span>
                         <span class="case">case</span>
                     </p>
-                </li>-->
+                </li>
+                <!-- <li data-name="manba">
+                    <h4>MANBA Website</h4>
+                    <p>
+                        2017.11 <br />
+                        <span class="web">web</span>
+                        <span class="private">private</span>
+                        <span class="case">case</span>
+                    </p>
+                </li> -->
                 <li data-name="ctw">
                     <h4>Catch The Wind: an Interactive Picture Book on iPad</h4>
                     <p>
@@ -280,7 +289,7 @@
                     </p>
                 </li>
                 <li data-name="rakuten-cbct-2017">
-                    <h4>Rakuten e-Ticket Website</h4>
+                    <h4>Rakuten Taiwan &ndash; e-Ticket Website</h4>
                     <p>
                         2017.04 - 2017.06 <br />
                         <a href="https://www.rakuten.com.tw/ticket" target="_blank">https://www.rakuten.com.tw/ticket</a>
@@ -362,7 +371,7 @@
                     </p>
                 </li>
                 <li data-name="tec">
-                    <h4>Taidah Entreprenuership Center Website</h4>
+                    <h4><span class="discontinued">Discontinued</span> Taidah Entreprenuership Center Website</h4>
                     <p>
                         2015.08 <br />
                         <a href="http://tec.ntu.edu.tw" target="_blank">http://tec.ntu.edu.tw</a>
@@ -405,7 +414,7 @@
                     </p>
                 </li>
                 <li data-name="unieco">
-                    <h4>UniEco Website</h4>
+                    <h4><span class="discontinued">Discontinued</span> UniEco Website</h4>
                     <p>
                         2014.11 <br />
                         <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
