--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </p>
                 </li>
                 <li data-name="uww">
-                    <h4><span class="discontinued">Discontinued</span> Yahoo! U Want Wall</h4>
+                    <h4>Yahoo! U Want Wall <span class="discontinued">Discontinued</span></h4>
                     <p>
                         2012.11 - 2013.04 <br />
                         <a href="https://tw.uwant.yahoo.com" target="_blank">https://tw.uwant.yahoo.com</a>
@@ -371,10 +371,10 @@
                     </p>
                 </li>
                 <li data-name="tec">
-                    <h4><span class="discontinued">Discontinued</span> Taidah Entreprenuership Center Website</h4>
+                    <h4>Taidah Entreprenuership Center Website <span class="discontinued">Discontinued</span></h4>
                     <p>
                         2015.08 <br />
-                        <a href="http://tec.ntu.edu.tw" target="_blank">http://tec.ntu.edu.tw</a>
+                        <a href="https://github.com/teaualune/tec-website" target="_blank">https://github.com/teaualune/tec-website</a>
                         <span class="web">web</span>
                         <span class="nodejs">Node.js</span>
                         <span class="case">case</span>
@@ -414,7 +414,7 @@
                     </p>
                 </li>
                 <li data-name="unieco">
-                    <h4><span class="discontinued">Discontinued</span> UniEco Website</h4>
+                    <h4>UniEco Website <span class="discontinued">Discontinued</span></h4>
                     <p>
                         2014.11 <br />
                         <a href="http://www.uniecotech.com" target="_blank">http://www.uniecotech.com</a>
