--- a/index.html
+++ b/index.html
@@ -102,45 +102,48 @@
                 <li data-name="android">
                     Android Development <span>★★★★</span>
                 </li>
+                <li data-name="react">
+                    React.js <span>★★★☆</span>
+                </li>
+                <li data-name="golang">
+                    Golang <span>★★★</span>
+                </li>
                 <li data-name="kubernetes">
                     Kubernetes <span>★★★</span>
                 </li>
                 <li data-name="matlab">
                     MATLAB <span>★★★</span>
                 </li>
+                <li data-name="rn">
+                    React Native <span>★★☆</span>
+                </li>
                 <li data-name="java-ee">
-                    Java EE (Servlet &amp; JSP) <span>★★★</span>
+                    Java EE (Servlet &amp; JSP) <span>★★☆</span>
                 </li>
                 <li data-name="ooad">
-                    UML &amp; OOAD <span>★★★</span>
+                    UML &amp; OOAD <span>★★☆</span>
                 </li>
                 <li data-name="latex">
-                    LaTeX <span>★★★</span>
+                    LaTeX <span>★★☆</span>
                 </li>
                 <li data-name="ai">
-                    Adobe Illustrator <span>★★★</span>
-                </li>
-                <li data-name="golang">
-                    Golang <span>★★☆</span>
+                    Adobe Illustrator <span>★★☆</span>
                 </li>
                 <li data-name="docker">
                     Docker <span>★★☆</span>
                 </li>
+                <li data-name="vue">
+                    Vue.js <span>★★☆</span>
+                </li>
                 <li data-name="sql">
-                    SQL <span>★★☆</span>
+                    SQL <span>★☆</span>
                 </li>
                 <li data-name="c">
-                    C <span>★★☆</span>
+                    C <span>★☆</span>
                 </li>
                 <li data-name="cuda">
-                    CUDA <span>★★☆</span>
+                    CUDA <span>★☆</span>
                 </li>
-                <li data-name="vue">
-                    Vue.js <span>★★</span>
-                </li>
-                <!-- <li data-name="hadoop">
-                    Hadoop <span>★☆</span>
-                </li> -->
                 <li data-name="python">
                     Python <span>★☆</span>
                 </li>
@@ -165,6 +168,7 @@
                     <option value="startup">startup</option>
                     <option value="angular">Angular.js</option>
                     <option value="react">React.js</option>
+                    <option value="rn">React Native</option>
                     <option value="vue">Vue.js</option>
                     <option value="yahoo">Yahoo</option>
                     <option value="ios">iOS</option>
@@ -198,7 +202,7 @@
                 <li data-name="himelight">
                     <h4>Himelight</h4>
                     <p>
-                        2014.09 - Present <br />
+                        2014.09 - 2016.02 <br />
                         <a href="https://www.himelight.com" target="_blank">https://www.himelight.com</a>
                         <span class="web">web</span>
                         <span class="startup">startup</span>
@@ -210,12 +214,15 @@
                 <li data-name="yoola">
                     <h4>RadioFlux Yoola</h4>
                     <p>
+                        2016.06 - Present <br />
+                        <a href="https://www.radioflux.com" target="_blank">https://www.radioflux.com</a>
                         <span class="startup">startup</span>
                         <span class="private">private</span>
                         <span class="web">web</span>
                         <span class="nodejs">Node.js</span>
                         <span class="kubernetes">Kubernetes</span>
                         <span class="react">React.js</span>
+                        <span class="react">React Native</span>
                         <span class="vue">Vue.js</span>
                         <span class="golang">Golang</span>
                         <span class="ios">iOS</span>
@@ -259,6 +266,17 @@
                         <span class="support">support</span>
                     </p>
                 </li>
+                <li data-name="glocalclick">
+                        <h4>Glocal Click</h4>
+                        <p>
+                            <a href="https://glocalclick.com" target="_blank">https://glocalclick.com</a>
+                            <span class="web">web</span>
+                            <span class="nodejs">Node.js</span>
+                            <span class="vue">Vue.js</span>
+                            <span class="case">case</span>
+                            <span class="support">support</span>
+                        </p>
+                    </li>
                 <li data-name="merck">
                     <h4>Merck One Page</h4>
                     <p>
@@ -269,15 +287,16 @@
                         <span class="case">case</span>
                     </p>
                 </li>
-                <!-- <li data-name="manba">
+                <li data-name="manba">
                     <h4>MANBA Website</h4>
                     <p>
                         2017.11 <br />
+                        <a href="http://www.manba.com.tw" target="_blank">http://www.manba.com.tw</a>
                         <span class="web">web</span>
-                        <span class="private">private</span>
                         <span class="case">case</span>
+                        <span class="support">support</span>
                     </p>
-                </li> -->
+                </li>
                 <li data-name="ctw">
                     <h4>Catch The Wind: an Interactive Picture Book on iPad</h4>
                     <p>
