add certificates; adjust font weight

--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
                     Ruby on Rails (RoR) <span>★</span>
                 </li>
             </ul>
+            <header>
+                <h3>Certificates</h3>
+            </header>
+            <ul>
+                <li data-name="swift">
+                    <h4>Apple Train-the-Trainer (T3) Certificate</h4>
+                    <p>2018.11 <br /><span class="ios">iOS</span></p>
+                </li><li data-name="java">
+                    <h4>Sun Certified Java Programmer</h4>
+                    <p>2010.08 <br /><span class="java">Java</span></p>
+                </li>
+            </ul>
         </section>
         <section id="works">
             <header>
