--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <li data-name="js">
                     JavaScript <span>★★★★☆</span>
                 </li><li data-name="f2e">
-                    Frontend Engineering <span>★★★★☆</span>
-                </li><li data-name="nodejs">
                     Node.js <span>★★★★☆</span>
+                </li><li data-name="nodejs">
+                    Frontend Engineering <span>★★★★</span>
                 </li><li data-name="java-se">
                     Java SE <span>★★★★</span>
                 </li><li data-name="swift">
@@ -96,6 +96,8 @@
                     Android Development <span>★★★★</span>
                 </li><li data-name="react">
                     React.js <span>★★★☆</span>
+                </li><li data-name="kotlin">
+                    Kotlin <span>★★★☆</span>
                 </li><li data-name="golang">
                     Golang <span>★★★</span>
                 </li><li data-name="kubernetes">
