update gunpla and case

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <p>Programmer, Software Engineer, Gunpla Builder</p>
             <h3>Gunpla Works</h3>
             <ul>
+                <li><a href="https://photos.app.goo.gl/1e5qC9ZMqpHZaGKP6" target="_blank">TR-6 Woundwort [Orbital]</a></li>
                 <li><a href="https://photos.app.goo.gl/g6G3hUcCZh7Uigk57" target="_blank">Almighty Zeta Gundam (2018)</a></li>
                 <li><a href="https://photos.app.goo.gl/rVCEboHfXRaNnvtq5" target="_blank">Coffin Spear (2017)</a></li>
             </ul>
@@ -232,18 +233,25 @@
                     </p>
                 </li>
             </ul><ul class="works work-generals">
-                <li data-name="keylessok">
-                        <h4>KeylessOK App</h4>
-                        <a href="http://tavis888.wixsite.com/keylessok" target="_blank">http://tavis888.wixsite.com/keylessok</a>
-                        <span class="private">private</span>
+                <li data-name="gogopet">
+                        <h4>Gogo PET</h4>
+                        <a href="https://www.findingdog.com.tw" target="_blank">https://www.findingdog.com.tw</a>
                         <span class="case">case</span>
-                        <span class="support">support</span>
-                        <span class="ios">iOS</span>
-                        <span class="android">Android</span>
-                        <span class="java">Java</span>
                         <span class="web">web</span>
                         <span class="nodejs">Node.js</span>
-                    </li><li data-name="viivi">
+                        <span class="react">React.js</span>
+                </li><li data-name="keylessok">
+                    <h4>KeylessOK App</h4>
+                    <a href="http://tavis888.wixsite.com/keylessok" target="_blank">http://tavis888.wixsite.com/keylessok</a>
+                    <span class="private">private</span>
+                    <span class="case">case</span>
+                    <span class="support">support</span>
+                    <span class="ios">iOS</span>
+                    <span class="android">Android</span>
+                    <span class="java">Java</span>
+                    <span class="web">web</span>
+                    <span class="nodejs">Node.js</span>
+                </li><li data-name="viivi">
                     <h4>Viivi</h4>
                     <a href="https://www.viivi.io" target="_blank">https://www.viivi.io</a>
                     <span class="startup">startup</span>
